@@ -1,5 +1,8 @@
 MicroEmulator
 
+- target build depends on build.properties configuration: 
+    target = app | applet
+
 0.3.1 (alpha) - 21.11.2002
 - device display is better customizable
 - many fixes in ChoiceGroup (Shane Harper)
